# AMT-Hypervector

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Makefile  README.md  RELEASE_0.1.1.md  SECURITY.md  config.yaml  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: AMT_prototype_paper.md  CHANGELOG.md  design_notes.md  index.md  overview_paper.md  paper.md
docs/examples/: chess_selfplay.ipynb
docs/tutorials/: quickstart.md
examples/: encode_demo.ipynb  eval.py  train.py
examples/math_bin_hv/: README.md  __init__.py  hypervector.py  math_bin_selfplay.py  oracles.py  requirements.txt
examples/selfplay/data/: seed_data.pgn  training_log.csv
examples/sentiment_analysis/: run_demo.py
examples/tiny_gpt2_lora/: run_demo.py
src/amt/: __init__.py  adf_update.py  cli.py  encoder.py  kernel.py  mlp.py  scheduler.py
src/hypervector_core/: __init__.py  adf.py  encoder.py  info_gain.py  sticky_pool.py
src/llm_adapter/: __init__.py  adapter.py  hooks.py
src/plugins/chess_toy/: README.md  __init__.py  selfplay_chess.py
src/selfplay_chess/: __init__.py  data.py  eval.py  model.py  train.py
src/ui/: __init__.py  app.py
tests/: test_adapter.py  test_adf.py  test_adf_update.py  test_chess_plugin.py  test_encoder.py  test_eval.py  test_hooks.py  test_import_all.py  test_info_gain.py  test_kernel.py  test_math_bin_selfplay.py  test_selfplay.py  test_sticky_pool.py  test_ui.py
