[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amt-hypervector"
version = "0.1.1"
authors = [{name = "Your Name", email = "you@example.com"}]
description = "Bayesian Hypervector Rule Embeddings: Online, explainable, no-backprop hypervector library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["numpy>=1.23", "pyyaml>=6.0"]

[project.scripts]
bhre = "amt.cli:main"
selfplay = "selfplay_chess.train:main"
eval = "selfplay_chess.eval:main"
ui = "ui.app:main"
math-bin = "examples.math_bin_hv.math_bin_selfplay:main"

[project.optional-dependencies]
dev = ["pytest", "mypy", "flake8", "mkdocs", "mkdocs-material"]
torch = ["torch>=2.0", "torchvision>=0.14", "torchaudio>=2.0"]
examples = ["python-chess>=1.7.0", "tqdm>=4.66"]
ui = ["flask"]
