[metadata]
description-file = README.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.23
    pyyaml>=6.0

[options.extras_require]
dev =
    pytest
    mypy
    flake8
    mkdocs
    mkdocs-material
torch =
    torch>=2.0
    torchvision>=0.14
    torchaudio>=2.0
examples =
    python-chess>=1.7.0
ui =
    flask
